--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
       </div>
     </div>
 
-    <!-- Main Content -->
     <div class="main-content">
-      <div class="chart-container">
-        <h2>Thời gian khám trung bình của mỗi ngày theo tuần</h2>
-        <canvas id="chartNgayTheoTuan"></canvas>
-      </div>
-      <div class="chart-container">
-        <h2>Thời gian khám trung bình của mỗi tuần theo tháng</h2>
-        <canvas id="chartTuanTheoThang"></canvas>
-      </div>
-    </div>
+  <!-- Chart 1 -->
+  <div class="chart-container">
+    <h2>Thời gian khám trung bình của mỗi ngày theo tuần</h2>
+    <canvas id="chartNgayTheoTuan"></canvas>
+    <!-- Legend cho Chart 1 -->
+  </div>
+
+  <!-- Chart 2 -->
+  <div class="chart-container">
+    <h2>Thời gian khám trung bình của mỗi tuần theo tháng</h2>
+    <canvas id="chartTuanTheoThang"></canvas>
+  </div>
+</div>
+
   </div>
 
   <script src="script.js"></script>
