--- a/index.html
+++ b/index.html
@@ -12,26 +12,29 @@
     <!-- Sidebar -->
     <div class="sidebar">
       <div class="logo">
+        <img src="logo.jpg" class="img" alt="Hình ảnh minh họa">
         <h1>Bệnh viện Quận 12</h1>
-        <p>TỔNG HỢP THỜI GIAN KHÁM TRUNG BÌNH</p> 
+        <p>TỔNG HỢP THỜI GIAN KHÁM TRUNG BÌNH</p>
+        <h3> Thời gian: 22/11/2024 11:00:00</h3>
       </div>
       <div class="stats">
         <div class="stat">
-          <h2>16 phút</h2>
+          <h2 class="thoigiankham-ls">29 phút 39 giây</h2>
           <p>Khám lâm sàng</p>
         </div>
         <div class="stat">
-          <h2>24 phút</h2>
+          <h2 class="thoigiankham-ls-xn">80 phút 18 giây</h2>
           <p>Khám lâm sàng và xét nghiệm</p>
         </div>
         <div class="stat">
-          <h2>36 phút</h2>
+          <h2 class="thoigiankham-ls-xn-ha">130 phút 49 giây</h2>
           <p>Khám lâm sàng, xét nghiệm và chẩn đoán hình ảnh</p>
         </div>
         <div class="stat">
-          <h2>53 phút</h2>
+          <h2 class="thoigiankham-ls-xn-ha-cn">182 phút 42 giây</h2>
           <p>Khám lâm sàng, xét nghiệm, chần đoán hình ảnh và tham dò chức năng</p>
         </div>
+        <h2>Thời gian trung bình: 102 phút 11 giây / lượt khám</h2>
       </div>
     </div>
 
